----- cvs ci ------
Mon Aug  7 20:43:09 UTC 2000
sms:
* Imported huskyui, nmcopy and tools from huskybse 
